--- a/Games.html
+++ b/Games.html
@@ -5,6 +5,7 @@
 	<script src="JS/common_jquery.js"></script>
     <script src="JS/game_js.js"></script>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Featured Game - 2048 </title>
 	<link rel="icon" href="Images/icon png.png">
 	<link href="CSS/game_css.css" rel="stylesheet" type="text/css" media="screen">
