FRC Video YT Update & Dropdown Opacity Update

--- a/Games.html
+++ b/Games.html
@@ -5,7 +5,7 @@
 	<script src="JS/common_jquery.js"></script>
     <script src="JS/game_js.js"></script>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
 	<title>Featured Game - 2048 </title>
 	<link rel="icon" href="Images/icon png.png">
 	<link href="CSS/game_css.css" rel="stylesheet" type="text/css" media="screen">
@@ -45,6 +45,10 @@
     <h2>You can now reverse to an earlier grid! ( You can reverse 10 grids at most. )</h2>
     <h2>You can now randomly generate a 2 or 4 tile with a button so you can always keep large # in corners.</h2>
     <h2 id="igotit"> Start the Game </h2>
+</div>
+
+<div id="game">
+
 </div>
 
 <div id="footer" class="_center">
