--- a/proj_frc.html
+++ b/proj_frc.html
@@ -68,7 +68,9 @@
         <h1>Videos, Videos, and Videos </h1>
         <p> During these 3 years, I've also developed a firm interest in video production. As a result, I've filmed and produced professional videos
             documenting the building season and the competitions, accumulating over 20,000 views.I've also mastered video editing
-            software including Adobe Premiere Pro, Adobe After Effects as well as Adobe Audition. Below are two of my best videos.</p>
+            software including Adobe Premiere Pro, Adobe After Effects as well as Adobe Audition. Below are two of my best videos.
+            You can also visit my <a href="https://www.youtube.com/channel/UC33WP6-Af8Oy7SGzZm5mxng">YouTube Channel</a> to view all of them.
+        </p>
     </div>
         <div style="margin-top: 3%">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/9hqpB1AoOpU" frameborder="0" allowfullscreen></iframe>
