Common CSS Made Scalable with Min-width

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 <div id="wrapper">
     <div id="col1">
         <div id="gfx" class="stylez">
-            <a href="Graphic%20Design.html">GRAPHIC DESIGN PORTFOLIO</a>
+            <a href="Graphic%20Design.html">GRAPHIC DESIGN <br>PPORTFOLIO</a>
         </div>
     </div>
     <div id="col2">
