--- a/Games.html
+++ b/Games.html
@@ -9,38 +9,329 @@
     <title>Featured Game - 2048 </title>
     <link rel="icon" href="Images/icon png.png">
     <link href="CSS/game_css.css" rel="stylesheet" type="text/css" media="screen">
-    <link href="CSS/common.css" rel="stylesheet" type="text/css" media="screen">
+    <!--<link href="CSS/common.css" rel="stylesheet" type="text/css" media="screen">-->
 
     <!--REACT JS LIBRARIES-->
     <script src="JS/react.js"></script>
     <script src="JS/react-dom.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.34/browser.min.js"></script>
-    <script src="JS/2048.js"></script>
+    <!--<script src="JS/2048.js" type="text/javascript"></script>-->
     <!--REACT JS INCOMING-->
     <script type="text/babel">
+        class Board {
+            constructor() {
+                this.score = 0;
+                this.empty_spots = [];
+                this.history = [];
+                this.grid = []; // main data structure representation
+                for (let i = 0; i < 4; ++i) {
+                    let row = [];
+                    for (let j = 0; j < 4; ++j) {
+                        row.push(0);
+                        this.empty_spots.push([i, j]);
+                    }
+                    this.grid.push(row);
+                }
+            }
+
+            get_board() {
+                return this.grid;
+            }
+
+            set(i, j, val) {
+                this.grid[i][j] = val;
+            }
+
+            print_board() {
+                var result = "";
+                for (var i = 0; i < this.grid.length; i++) {
+                    for (var j = 0; j < this.grid[i].length; j++) {
+                        result += this.grid[i][j].toString();
+                        result += " ";
+                    }
+                    result += "\n";
+                }
+                alert(result);
+            }
+
+            /*
+             Both functions below are not functional. Contents seem to be linked to each other, causing all
+             values in history to be the same
+             */
+            set_reverse(input) {
+                if (this.history.length < 10) { // only add to database
+                    this.history.push(input);
+                } else {
+                    this.history.shift(); // remove the first element
+                    this.history.push(input);
+                }
+            }
+
+            reverse() {
+                this.grid = this.history[this.history.length - 1];
+//                this.grid = [];
+//                for (var i = 0; i < rev.length; i ++){
+//                    var temp = [];
+//                    for (var j = 0; j < rev[i].length; j ++){
+//                        temp.push(rev[i][j]);
+//                    }
+//                    this.grid.push(temp);
+//                }
+                this.history.pop();
+            }
+
+            random_generate() {
+                if (this.empty_spots.length !== 0) {
+                    var random = [2, 4];
+                    var add_index = Math.floor(Math.random() * random.length);
+                    var rand_index = Math.floor(Math.random() * this.empty_spots.length);
+                    //turn that empty spot into 2 or 4, then remove from empty spots
+                    for (var i = 0; i < this.empty_spots.length; i++) {
+                        if (i === rand_index) {
+                            this.set(this.empty_spots[i][0], this.empty_spots[i][1], random[add_index]);
+                            break;
+                        }
+                    }
+                    this.empty_spots.splice(rand_index, 1);//remove from empty spots
+                }
+            }
+
+            update_empty_spots() {
+                this.empty_spots = [];
+                for (var i = 0; i < 4; ++i) {
+                    for (var j = 0; j < 4; ++j) {
+                        if (this.grid[i][j] === 0) { // meaning they are empty
+                            this.empty_spots.push([i, j]);
+                        }
+                    }
+                }
+            }
+
+            empty_size() {
+                alert(this.empty_spots.length);
+            }
+
+            move_down() {
+                for (var i = 0; i < this.grid.length; ++i) {
+                    var temp = [];
+                    for (var j = 0; j < this.grid[i].length; ++j) {
+                        if (this.grid[i][j] !== 0) {
+                            temp.push(this.grid[i][j]); // add nonzero numbers to temp {2, 4}
+                        }
+                    }
+                    while (temp.length < this.grid.length) {
+                        temp.unshift(0); //add 0s to temp until size is matched {0, 0, 2, 4}
+                    }
+                    //merging the same # s
+                    var temp2 = temp; // reverse temp
+                    temp2.reverse();
+                    var temp3 = [];
+                    for (var l = 0; l < temp2.length - 1; ++l) {
+                        if (temp2[l] === temp2[l + 1]) {
+                            temp3.push(temp2[l] + temp2[l + 1]);
+                            l++;
+                        } else {
+                            temp3.push(temp2[l]);
+                        }
+                    }
+                    //////////////
+                    var last = temp2[temp2.length - 1];
+                    if (temp.length === this.grid.length) temp3.push(last);
+                    //////////////
+                    while (temp3.length < this.grid.length) {
+                        temp3.push(0);
+                    }
+                    temp3.reverse();
+                    this.grid[i] = temp3;
+                }
+                this.update_empty_spots();
+                this.random_generate();
+            }
+
+            move_left() {
+                for (var i = 0; i < this.grid.length; ++i) {
+                    var vertical = [];
+                    for (var j = 0; j < this.grid.length; ++j) {  // 0 4 16 32
+                        vertical.push(this.grid[j][i]);
+                    }
+                    var temp = [];
+                    for (var k = 0; k < vertical.length; ++k) {
+                        if (vertical[k] !== 0) temp.push(vertical[k]); // 4 16 32
+                    }
+                    while (temp.length < this.grid.length) temp.push(0); //4 16 32 0
+
+                    var temp2 = [];
+                    for (var l = 0; l < temp.length - 1; ++l) {
+                        if (temp[l] === temp[l + 1]) {
+                            temp2.push(temp[l] + temp[l + 1]);
+                            l++;
+                        } else {
+                            temp2.push(temp[l]);
+                        }
+                    }
+                    //////////////
+                    var last = temp[temp.length - 1];
+                    if (temp.length === this.grid.length) temp2.push(last);
+                    //////////////
+                    while (temp2.length < this.grid.length) {
+                        temp2.push(0);
+                    }
+                    for (var x = 0; x < temp2.length; ++x) {
+                        this.grid[x][i] = temp2[x];
+                    }
+                }
+                this.update_empty_spots();
+                this.random_generate();
+            }
+
+            move_up() {
+                for (var i = 0; i < this.grid.length; ++i) {
+                    var temp = [];
+                    for (var j = 0; j < this.grid[i].length; ++j) {
+                        if (this.grid[i][j] !== 0) {
+                            temp.push(this.grid[i][j]); // add nonzero numbers to temp {2, 4}
+                        }
+                    }
+                    for (var k = 0; k < this.grid.length - temp.length; ++k) {
+                        temp.push(0); //add 0s to temp until size is matched {2, 4, 0, 0}
+                    }
+                    //merging the same # s
+                    var temp2 = [];
+                    for (var l = 0; l < temp.length - 1; ++l) {
+                        if (temp[l] === temp[l + 1]) {
+                            temp2.push(temp[l] + temp[l + 1]);
+                            l++;
+                        } else {
+                            temp2.push(temp[l]);
+                        }
+                    }
+                    var last = temp[temp.length - 1];
+                    if (temp.length === this.grid.length) temp2.push(last);
+                    while (temp2.length < this.grid.length) {
+                        temp2.push(0);
+                    }
+                    this.grid[i] = temp2;
+                }
+                //update empty spots
+                this.update_empty_spots();
+                this.random_generate();
+            }
+
+            move_right() {
+                for (var i = 0; i < this.grid.length; ++i) {
+                    var vertical = [];
+                    for (var j = 0; j < this.grid.length; ++j) {  // 2 0 2 4
+                        vertical.push(this.grid[j][i]);
+                    }
+                    var vertical2 = [];
+                    for (var k = 0; k < vertical.length; ++k) {
+                        if (vertical[k] !== 0) vertical2.push(vertical[k]); // 2 2 4
+                    }
+                    while (vertical2.length < this.grid.length) vertical2.unshift(0); // 0 2 2 4 unshift pushes front
+
+                    var temp = vertical2;//reverse of vertical 2
+                    temp.reverse();
+
+                    var temp2 = [];
+                    for (var l = 0; l < temp.length - 1; ++l) {
+                        if (temp[l] === temp[l + 1]) {
+                            temp2.push(temp[l] + temp[l + 1]);
+                            l++;
+                        } else {
+                            temp2.push(temp[l]);
+                        }
+                    }
+                    //////////////
+                    var last = temp[temp.length - 1];
+                    if (temp.length === this.grid.length) temp2.push(last);
+                    //////////////
+                    while (temp2.length < this.grid.length) temp2.push(0);
+                    temp2.reverse();
+                    for (var j = 0; j < temp2.length; ++j) {
+                        this.grid[j][i] = temp2[j];
+                    }
+                }
+                this.update_empty_spots();
+                this.random_generate();
+            }
+
+            game_over() { //algorithm's correct
+                if(this.empty_spots.length !== 0){
+                    return false;
+                }
+//                alert("no empty spots");
+                //vertical check
+                for (var k = 0; k < this.grid.length; ++k) {
+                    for (var i = 1; i < this.grid.length; ++i) {
+                        if (this.grid[i][k] === this.grid[i - 1][k]){
+                            return false;
+                        }
+                    }
+                }
+
+                //horizontal check
+                for (var x = 0; x < this.grid.length; ++x) {
+                    for (var j = 1; j < this.grid[x].length; ++j) {
+                        if (this.grid[x][j] === 0){
+                            return false;
+                        }
+                        if (this.grid[x][j] === board[x][j - 1]){
+                            return false;
+                        }
+                    }
+                }
+                return true;
+            }
+        }
+
+
         /*
          determine what color should the tile be based on the value of the tile itself
          */
         function determine_color(num) {
             if (num === 0) {
                 return "beige";
-            } else if (num == 2) {
-                return "red";
-            }
-        }
-
-        function font_color(num){
-            if (num === 0){
+            } else if (num === 2) {
                 return "beige";
+            } else if (num === 4) {
+                return "yellow";
+            } else if (num === 8) {
+                return "#f4b042";
+            } else if (num === 16) {
+                return "#f48641";
+            } else if (num === 32) {
+                return "#f45241";
+            } else if (num === 64) {
+                return "#ff1800";
+            } else if (num === 128) {
+                return "#ff00b2";
             } else {
                 return "black";
             }
         }
 
+        function font_color(num) {
+            if (num === 0) {
+                return "beige";
+            } else if (num < 8) {
+                return "black";
+            } else {
+                return "white";
+            }
+        }
+
+        var grid = new Board();
+
         class Game extends React.Component {
             constructor(props) {
                 super(props);
-                this.update_pseudo = this.update_pseudo.bind(this);
+                this.update = this.update.bind(this);
+                this.rand_gen = this.rand_gen.bind(this);
+                this.left = this.left.bind(this);
+                this.up = this.up.bind(this);
+                this.right = this.right.bind(this);
+                this.down = this.down.bind(this);
+                //this.reverse_game = this.reverse_game.bind(this);
                 // have 16 different states, each representing a tile in the 2048 game
                 this.state = {
                     tile1: 0, tile2: 0, tile3: 0, tile4: 0,
@@ -50,15 +341,82 @@
                 };
             }
 
-            update_pseudo() {
-                this.setState({tile1: 2});
+            /*
+             Function that takes in a board and updates the values of each tile
+             */
+            update(board) {
+                this.setState({tile1: board[0][0]});
+                this.setState({tile2: board[0][1]});
+                this.setState({tile3: board[0][2]});
+                this.setState({tile4: board[0][3]});
+                this.setState({tile5: board[1][0]});
+                this.setState({tile6: board[1][1]});
+                this.setState({tile7: board[1][2]});
+                this.setState({tile8: board[1][3]});
+                this.setState({tile9: board[2][0]});
+                this.setState({tile10: board[2][1]});
+                this.setState({tile11: board[2][2]});
+                this.setState({tile12: board[2][3]});
+                this.setState({tile13: board[3][0]});
+                this.setState({tile14: board[3][1]});
+                this.setState({tile15: board[3][2]});
+                this.setState({tile16: board[3][3]});
+            }
+
+            rand_gen() {
+                grid.set_reverse(grid.get_board());
+                grid.random_generate();
+                this.update(grid.get_board());
+                if (grid.game_over()){
+                    alert("GAME OVER. PLEASE RELOAD THIS PAGE TO RESTART")
+                }
+            }
+
+            up() {
+                grid.set_reverse(grid.get_board());
+                grid.move_up();
+                this.update(grid.get_board());
+                if (grid.game_over()){
+                    alert("GAME OVER. PLEASE RELOAD THIS PAGE TO RESTART")
+                }
+            }
+
+            left() {
+                grid.set_reverse(grid.get_board());
+                grid.move_left();
+                this.update(grid.get_board());
+                if (grid.game_over()){
+                    alert("GAME OVER. PLEASE RELOAD THIS PAGE TO RESTART")
+                }
+            }
+
+            right() {
+                grid.set_reverse(grid.get_board());
+                grid.move_right();
+                this.update(grid.get_board());
+                if (grid.game_over()){
+                    alert("GAME OVER. PLEASE RELOAD THIS PAGE TO RESTART")
+                }
+            }
+
+            down() {
+                grid.set_reverse(grid.get_board());
+                grid.move_down();
+                this.update(grid.get_board());
+                if (grid.game_over()){
+                    alert("GAME OVER. PLEASE RELOAD THIS PAGE TO RESTART")
+                }
+            }
+
+            reverse_game() {
+                grid.reverse();
+                this.update(grid.get_board());
             }
 
             render() {
                 //returns a 4 by 4 grid containing the 2048 grid
                 return (
                         <div>
-                            <button onClick={this.update_pseudo}>Change Color</button>
                             <div style={{display: "flex", fontSize: "30px", margin: "0 0 0 14%"}}>
 
                                 <div style={{width: "20%", margin: "1%"}}>
@@ -181,8 +539,14 @@
                                     }}>{this.state.tile16}</h1>
                                 </div>
                             </div>
+                            <div style={{marginTop: "-2%"}}>
+                                <button onClick={this.rand_gen}>Random Generate</button>
+                                <button onClick={this.up}>Move up</button>
+                                <button onClick={this.left}>Move left</button>
+                                <button onClick={this.right}>Move Right</button>
+                                <button onClick={this.down}>Move Down</button>
+                            </div>
                         </div>
-//                        <SingleTile/>
                 );
             }
         }
@@ -220,11 +584,12 @@
 <div id="instr">
     <h2>This is a web-based implementation of 2048, created entirely from scratch by me.</h2>
     <h2 class="ins">Instructions:</h2>
-    <h2>If you are on a touchscreen device, <strong> swipe </strong> to move tiles.</h2>
-    <h2>If you are on a regular computer, <strong> use the arrow keys </strong> to move tiles.</h2>
+    <!--<h2>If you are on a touchscreen device, <strong> swipe </strong> to move tiles.</h2>-->
+    <!--<h2>If you are on a regular computer, <strong> use the arrow keys </strong> to move tiles.</h2>-->
+    <h2>Use the buttons below the grid to move tiles and to randomly generate 2 and 4.</h2>
     <h2>Your goal is to get as much points as possible, and to not run out of spaces!</h2>
     <h2 class="ins">Innovations:</h2>
-    <h2>You can now reverse to an earlier grid! ( You can reverse 10 grids at most. )</h2>
+    <!--<h2>You can now reverse to an earlier grid! ( You can reverse 10 grids at most. )</h2>-->
     <h2>You can now randomly generate a 2 or 4 tile with a button so you can always keep large # in corners.</h2>
     <h2 id="igotit"> Start the Game </h2>
 </div>
@@ -234,7 +599,7 @@
 </div>
 
 <div id="footer" class="_center">
-    <h4> &copy; JING WEI LI 2017</h4>
+    <h4> &copy; JING WEI LI 2017. Proudly Created from Scratch Using ReactJS</h4>
 </div>
 
 </body>
