Updated Projects Page with 2048

--- a/Games.html
+++ b/Games.html
@@ -588,6 +588,7 @@
     <!--<h2>If you are on a regular computer, <strong> use the arrow keys </strong> to move tiles.</h2>-->
     <h2>Use the buttons below the grid to move tiles and to randomly generate 2 and 4.</h2>
     <h2>Your goal is to get as much points as possible, and to not run out of spaces!</h2>
+    <h2>Click on one of the buttons below the grid to start the game.</h2>
     <h2 class="ins">Innovations:</h2>
     <!--<h2>You can now reverse to an earlier grid! ( You can reverse 10 grids at most. )</h2>-->
     <h2>You can now randomly generate a 2 or 4 tile with a button so you can always keep large # in corners.</h2>
