--- a/Projects.html
+++ b/Projects.html
@@ -45,6 +45,12 @@
             <a href="index.html">View project</a>
             <img src="Images/proj3.png">
         </div>
+        <div id="col1_item2">
+            <h2>2048 Game</h2>
+            <p>A reimagination of the popular 2048 mobile game, completely programmed from scratch using ReactJS. </p>
+            <a href="Games.html">View project</a>
+            <img src="Images/proj5.png">
+        </div>
     </div>
     <div id="col2">
         <div id="col2_item1" style="text-align: left">
